0621 recommended emulator: 10.1 WXGA, API=29

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
         android:id="@+id/graphic_overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         app:layout_constraintTop_toTopOf="@id/textureView"
         app:layout_constraintBottom_toBottomOf="@id/textureView"
         app:layout_constraintLeft_toLeftOf="@id/textureView"
