--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,16 @@
     tools:context="com.example.camera2.MainActivity">
 
     <TextureView
-        android:layout_width="640px"
-        android:layout_height="480px"
         android:id="@+id/textureView"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true" />
 
     <com.example.camera2.GraphicOverlay
         android:id="@+id/graphic_overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        app:layout_constraintTop_toTopOf="@id/textureView"
-        app:layout_constraintBottom_toBottomOf="@id/textureView"
-        app:layout_constraintLeft_toLeftOf="@id/textureView"
-        app:layout_constraintRight_toRightOf="@id/textureView"
-        android:layout_alignParentStart="true" />
+        android:layout_centerInParent="true" />
 
     <Button
         android:layout_width="wrap_content"
